# webkitview-openharmony

./: .gitignore  README.md  build-profile.json5  hvigorfile.ts  hvigorw  install-webkitview  launch-webkitview
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: syscap.json
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/cmake/: ohos_with_webkit.cmake
entry/src/main/cpp/common/: environment.cpp  environment.h  log.h
entry/src/main/cpp/network_process/: network_process.cpp
entry/src/main/cpp/platform/: wpe_display_ohos.cpp  wpe_display_ohos.h  wpe_input_method_context_ohos.cpp  wpe_input_method_context_ohos.h  wpe_toplevel_ohos.cpp  wpe_toplevel_ohos.h  wpe_view_ohos.cpp  wpe_view_ohos.h  wpe_view_ohos_renderer.h
entry/src/main/cpp/platform/gles3/: wpe_view_ohos_gles3_renderer.cpp  wpe_view_ohos_gles3_renderer.h
entry/src/main/cpp/runtime/: arkts_runtime.cpp  arkts_runtime.h  message_pump.cpp  message_pump.h  wk_runtime.cpp  wk_runtime.h  wk_web_view.cpp  wk_web_view.h
entry/src/main/cpp/types/libwebkitview/: oh-package.json5
entry/src/main/cpp/web_process/: web_process.cpp
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/interface/: WebKitInterface.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: ConfigInstaller.ets
entry/src/main/resources/base/element/: string.json
prebuilts/: memmgr_config.xml
tools/: bootstrap.py  clear-faultlogs.sh  copy-wpewebkit-from-cerbero.sh  gen-signing-config.sh  install-ohos-sdk.sh  prepare-board.sh  recv-webkitview-faultlog.sh  send-webkitview.sh  symbolize-faultlog.sh
